sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/LDGCRM_Partner_Account__c.object-meta.xml
<CustomObject>
    <description>Represents Login.gov Partner Accounts, which represent agreements with an Account (Government Agency).</description>
    <label>Partner Account</label>
    <nameField>
        <label>Partner Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>