sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Account__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Account__c</fullName>
    <description>Parent Account for this Partner Account. Accounts refer to official/federal accounts based upon established Federal, State, Local hierarchies. Allows for acc</description>
    <inlineHelpText>Parent &quot;Account&quot; for this Partner Account. Please select the Agency/Bureau, State or other official Account</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Federal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Accounts</relationshipLabel>
    <relationshipName>Partner_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>