sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Active_Accounts_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Active_Accounts_Folder_URL__c</fullName>
    <description>Add Google Drive link for this account here.</description>
    <inlineHelpText>Add Google Drive link for this account here.</inlineHelpText>
    <label>Active Accounts Folder URL</label>
    <type>Url</type>
</CustomField>