sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Agreement_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Agreement_Short_Name__c</fullName>
    <description>Agency abbreviation followed by the program/application the opportunity is in reference to.</description>
    <inlineHelpText>Agency abbreviation followed by the program/application the opportunity is in reference to.</inlineHelpText>
    <label>Agreement Short Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>