sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Current_Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Current_Status_Summary__c</fullName>
    <description>A high level summary of the current state of the partner agency. It should include a one liner on who we are talking to (name, role) and what they are saying/blocked on.</description>
    <inlineHelpText>A high level summary of the current state of the partner agency. It should include a one liner on who we are talking to (name, role) and what they are saying/blocked on.</inlineHelpText>
    <label>Current Status Summary</label>
    <type>TextArea</type>
</CustomField>