sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Initial_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Initial_Agreement_Date__c</fullName>
    <description>The PoP Start date of the partner agency</description>
    <inlineHelpText>The PoP Start date of the partner agency</inlineHelpText>
    <label>Initial Agreement Date</label>
    <type>Date</type>
</CustomField>