sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Market_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Market Segment based upon Account</description>
    <inlineHelpText>Market Segment based upon Account</inlineHelpText>
    <label>Market Segment</label>
    <referenceTo>LDGCRM_Market_Segment__c</referenceTo>
    <relationshipLabel>Partner Accounts</relationshipLabel>
    <relationshipName>Partner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>