sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Partner_Account_Complexity__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Partner_Account_Complexity__c</fullName>
    <description>5 - Largest and/or most complicated agencies in Government
4 - Large account that has high visibility, complex stakeholders.
3 - Medium sized account, not high maintenance, key contributor
2 - Medium sized account, not high maintenance, significant opportunities for growth</description>
    <inlineHelpText>5 - Largest and/or most complicated agencies in Government
4 - Large account that has high visibility, complex stakeholders.
3 - Medium sized account, not high maintenance, key contributor
2 - Medium sized account, not high maintenance, significant opportunities for growth</inlineHelpText>
    <label>Partner Account Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High Complexity</fullName>
            </value>
            <value>
                <fullName>High Complexity</fullName>
            </value>
            <value>
                <fullName>Medium Complexity</fullName>
            </value>
            <value>
                <fullName>Low Complexity</fullName>
            </value>
            <value>
                <fullName>Very Low Complexity</fullName>
            </value>
            <value>
                <fullName>Small - Low Touch</fullName>
            </value>
            <value>
                <fullName>Medium - Key Contributor</fullName>
            </value>
            <value>
                <fullName>Medium - High Growth</fullName>
            </value>
            <value>
                <fullName>Largest - Most Complex</fullName>
            </value>
            <value>
                <fullName>Large - High Visibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>