sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Partner_Account_Health__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Partner_Account_Health__c</fullName>
    <description>The account health of the partner agency determined by the account manager and partner success manager based on factors such as the renewal status, partner sentiment, incidents, or outstanding funding issues.</description>
    <inlineHelpText>The account health of the partner agency determined by the account manager and partner success manager based on factors such as the renewal status, partner sentiment, incidents, or outstanding funding issues.</inlineHelpText>
    <label>Partner Account Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>