sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Partner_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Partner_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account Manager or Partner Success Manager responsible for the partner agreement and the first point of contact internal stakeholders to Login.gov should contact with inquiries about the partner agency.</description>
    <inlineHelpText>The Account Manager or Partner Success Manager responsible for the partner agreement and the first point of contact internal stakeholders to Login.gov should contact with inquiries about the partner agency.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>