sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Partner_Account_Priority__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Partner_Account_Priority__c</fullName>
    <description>High - Accounts with high engagement ie. recurring meetings, Enterprise pricing, TMF funded agreement, Partner Advisory Group member, pilot participation, etc.

Medium - Accounts with high engagement only during specific milestones ie. app launch, renewals, end user surges/issues.

Low - Accounts with low engagement limited to agreement actions, transactional/straightforward pricing, no regularly scheduled meetings, or intensive collaboration among Login.gov internal teams</description>
    <inlineHelpText>High - Accounts with high engagement ie. recurring meetings, Enterprise pricing, TMF funded agreement, Partner Advisory Group member, pilot participation, etc.

Medium - Accounts with high engagement only during specific milestones ie. app launch, renewals, end user surges/issues.

Low - Accounts with low engagement limited to agreement actions, transactional/straightforward pricing, no regularly scheduled meetings, or intensive collaboration among Login.gov internal teams</inlineHelpText>
    <label>Partner Account Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>