sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Partner_Summary_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Partner_Summary_URL__c</fullName>
    <description>A link to the agency/partner summary documentation where notes and drafted communications to partner agencies are tracked.</description>
    <inlineHelpText>A link to the agency/partner summary documentation where notes and drafted communications to partner agencies are tracked.</inlineHelpText>
    <label>Partner Summary URL</label>
    <type>Url</type>
</CustomField>