sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Service_Type__c</fullName>
    <description>The highest assurance level integrated on a partner agreement</description>
    <inlineHelpText>The highest assurance level integrated on a partner agreement</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authentication</fullName>
            </value>
            <value>
                <fullName>Basic IDV</fullName>
            </value>
            <value>
                <fullName>Enhanced IDV (IAL2)</fullName>
            </value>
            <value>
                <fullName>Identity Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>