sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/fields/LDGCRM_Status__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Status__c</fullName>
    <description>The status of the partner agency. This will indicate if the partner is on a signed agreement with applications with active usage, on a signed agreement but no applications with active usage, or is no longer an active agreement.</description>
    <inlineHelpText>The status of the partner agency. This will indicate if the partner is on a signed agreement with applications with active usage, on a signed agreement but no applications with active usage, or is no longer an active agreement.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - With Live Applications</fullName>
            </value>
            <value>
                <fullName>Active - But No Live Applications</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>