sfdx/force-app/main/default/objects/LDGCRM_Partner_Account__c/listViews/LDGCRM_All_Partner_Accounts.listView-meta.xml
<ListView>
    <fullName>LDGCRM_All_Partner_Accounts</fullName>
    <columns>LDGCRM_Market_Segment__c</columns>
    <columns>NAME</columns>
    <columns>LDGCRM_Account__c</columns>
    <columns>LDGCRM_Partner_Account_Owner__c</columns>
    <columns>LDGCRM_Service_Type__c</columns>
    <columns>LDGCRM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Partner Accounts</label>
</ListView>